[workspace]
members = [
	"hang/cli",
	"hang/lib",
	"hang/wasm",
	"moq/clock",
	"moq/lite",
	"moq/native",
	"moq/relay",
]
resolver = "2"

[workspace.dependencies]
#web-transport = { path = "../web-transport-rs/web-transport" }
web-transport = "0.8"
tokio = "1.44"

moq-lite = { version = "0.1", path = "moq/lite" }
moq-native = { version = "0.6", path = "moq/native" }
hang = { version = "0.1", path = "hang/lib" }

[profile.release.package.moq-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
