[workspace]
members = [
	"hang",
	"hang-cli",
	"hang-wasm",
	"moq-clock",
	"moq-lite",
	"moq-native",
	"moq-relay",
]
resolver = "2"

[workspace.dependencies]
#web-transport = { path = "../web-transport-rs/web-transport" }
web-transport = "0.8"
tokio = "1.44"

hang = { version = "0.1", path = "hang" }
moq-lite = { version = "0.1", path = "moq-lite" }
moq-native = { version = "0.6", path = "moq-native" }

[profile.release.package.moq-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
