[package]
name = "moq-api"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP server
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON encoding
serde = "1"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
redis = { version = "0.23", features = [
	"tokio-rustls-comp",
	"connection-manager",
] }
url = { version = "2", features = ["serde"] }

# Error handling
log = "0.4"
env_logger = "0.9"
thiserror = "1"
