[package]
name = "moq-dir"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.2.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-native = { path = "../moq-native", version = "0.4" }
moq-transport = { path = "../moq-transport", version = "0.6" }

# QUIC
web-transport = { workspace = true }
bytes = "1"

# Async stuff
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = { version = "1", features = ["backtrace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
