[package]
name = "moq-gst"
description = "Media over QUIC - Gstreamer plugin"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.4"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-native = { version = "0.6", path = "../moq-native" }
moq-karp = { version = "0.11", path = "../moq-karp" }

gst = { package = "gstreamer", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
once_cell = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
anyhow = { version = "1", features = ["backtrace"] }
url = "2"

[build-dependencies]
gst-plugin-version-helper = "0.8"

[lib]
name = "gstmoq"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
