[package]
name = "moq-karp"
description = "Media over QUIC"
authors = []
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.11.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-transfork = { path = "../moq-transfork", version = "0.8" }

url = "2"
bytes = "1.9"
hex = "0.4"

mp4-atom = { version = "0.3", features = ["tokio", "bytes"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }

thiserror = "2"
tracing = "0.1"
lazy_static = "1"
regex = "1"

tokio = { version = "1.41", features = ["macros"] }

# CLI only dependencies
moq-native = { path = "../moq-native", version = "0.5", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", features = ["backtrace"], optional = true }

[dependencies.derive_more]
version = "1"
features = [
	"add",
	"add_assign",
	"mul",
	"mul_assign",
	"sum",
	"from",
	"display",
	"debug",
]

[features]
cli = ["moq-native", "tokio/full", "clap", "anyhow"]
default = ["cli"]
