[package]
name = "moq-karp"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.15.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-transfork = { path = "../moq-transfork", version = "0.12" }
moq-async = { path = "../moq-async", version = "0.1" }

bytes = "1.10"
hex = "0.4"

mp4-atom = { version = "0.7.1", features = ["tokio", "bytes", "serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }

thiserror = "2"
tracing = "0.1"
lazy_static = "1"
regex = "1"
futures = "0.3"

tokio = { version = "1.44", features = ["macros"] }

web-time = "1"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug"]
