[package]
name = "moq-native"
description = "Media over QUIC - Helper library for native applications"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.4.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.6" }
web-transport = { workspace = true }
web-transport-quinn = "0.3"

rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.7"
quinn = { version = "0.11", features = ["ring"] }
ring = "0.17"
webpki = "0.22"

hex = "0.4"
url = "2"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
