[package]
name = "moq-proto"
description = "Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[features]
default = []

[dependencies]
bytes = "1"
thiserror = "2"
num_enum = "0.7"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug", "into"]
