[package]
name = "moq-pub"
description = "Media over QUIC"
authors = ["Mike English", "Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.7.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-native = { path = "../moq-native", version = "0.4" }
moq-transport = { path = "../moq-transport", version = "0.6" }
moq-catalog = { path = "../moq-catalog", version = "0.2" }

url = "2"
bytes = "1"

# Async stuff
tokio = { version = "1", features = ["full"] }

# CLI, logging, error handling
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
mp4 = "0.14"
anyhow = { version = "1", features = ["backtrace"] }
serde_json = "1"
rfc6381-codec = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
