[package]
name = "moq-relay"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.6.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.6" }
moq-native = { path = "../moq-native", version = "0.4" }
moq-api = { path = "../moq-api", version = "0.2" }

# QUIC
url = "2"

# Async stuff
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web server to serve the fingerprint
axum = { version = "0.7", features = ["tokio"] }
hyper-serve = { version = "0.6", features = [
	"tls-rustls",
] } # fork of axum-server
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"

# Error handling
anyhow = { version = "1", features = ["backtrace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
