[package]
name = "moq-relay"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.6.15"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-transfork = { path = "../moq-transfork", version = "0.8" }
moq-native = { path = "../moq-native", version = "0.5" }
web-transport = { workspace = true }

# QUIC
url = "2"

# Async stuff
tokio = { version = "1", features = ["full"] }

# Web server to serve the fingerprint
axum = { version = "0.7", features = ["tokio"] }
hyper-serve = { version = "0.6", features = [
	"tls-rustls",
] } # fork of axum-server
tower-http = { version = "0.6", features = ["cors"] }

# Error handling
anyhow = { version = "1", features = ["backtrace"] }

# CLI
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
