[package]
name = "moq-transfork"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.8.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
bytes = "1"
thiserror = "2"
tracing = "0.1"

tokio = { version = "1.41", features = [
	"macros",
	"io-util",
	"sync",
	"test-util",
] }

web-transport = { workspace = true }
futures = "0.3"

num_enum = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
