[package]
name = "moq-transfork"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.12.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
bytes = "1"
thiserror = "2"
tracing = "0.1"

tokio = { version = "1.44", features = [
	"macros",
	"io-util",
	"sync",
	"test-util",
] }

moq-proto = { path = "../moq-proto", version = "0.1" }
web-transport = { workspace = true }
futures = "0.3"

moq-async = { path = "../moq-async", version = "0.1" }
