[package]
name = "moq-transport"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.2.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
thiserror = "1"
anyhow = "1"
tokio = { version = "1.27", features = ["macros", "io-util", "sync"] }
log = "0.4"
indexmap = "2"

quinn = "0.10"
webtransport-quinn = "0.5.2"
